--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -1,3 +1,23 @@
-// Place all the styles related to the message controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.message {
+  margin: 10px;
+  color: white;
+
+  .content {
+    background: #607D8B;
+    border-radius: 20px;
+    border-top-left-radius: 0px;
+    display: inline-block;
+    padding: 10px;
+    font-size:15px;
+  }
+
+  img {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+  }
+
+  ul {
+    list-style-type: none;
+  }
+}
